tests/semantic/statement_building/snapshots/r#mod__semantic__statement_building__local_var_building__access_to_var_before_definition.snap
---
source: tests/semantic/statement_building/local_var_building.rs
expression: error
---
- key:
    kind: VarNotFound
    payload:
      Str: local
  earliest_phase: ExprEngine
  ranges:
    - start: 0
      end: 0
  severity: Error
- key:
    kind: MissingArg
    payload: None
  earliest_phase: ExprEngine
  ranges:
    - start: 0
      end: 0
  severity: Error
