tests/semantic/statement_building/snapshots/r#mod__semantic__statement_building__local_var_building__local_var_definition.snap
---
source: tests/semantic/statement_building/local_var_building.rs
expression: test_ctx.namespace.func_ctx
---
funcs:
  0:
    name: main
    is_member: false
    is_static: false
    params: []
    return_type:
      Primitive: Void
    block:
      body:
        - LocalVar:
            var_id: 0
      scope_id: 1
    range:
      start: 0
      end: 0
member_functions: {}
global_functions:
  main: 0
next_function_id: 1
